project-1/k8/proj1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-1-service
spec:
  type: ClusterIP  # Changed to ClusterIP
  selector:
    app: nextjsweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
