project-1/k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextjs-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /next(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: project-1-service
            port: 
              number: 80
      - path: /argo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
